[metadata]
name = lampy
author = ALaDyn Collaboration
author_email = dterzani@lbl.gov
description = Python suite to access, manipulate and plot ALaDyn data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ALaDyn/ALaDyn
project_urls =
    Bug Tracker = https://github.com/ALaDyn/tools-ALaDyn/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL3
    Operating System :: OS Independent
    Natural Language :: English,
    Environment :: Console,
    Intended Audience :: Science/Research,
    Topic :: Scientific/Engineering :: Physics,

[options]
packages = find:
python_requires = >=3.6
install_requires =
    Cython
    numpy
    matplotlib
    scipy
    f90nml

[options.packages.find]
where =
    lampy
include =
    *py